# mini-prometheus

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
constitution/: ARCHITECTURE_DECISION.md  HANDBOOK_v1.1.md  README.md  computational-objects.md  ontology.md  operators.md  promotion-workflow.md  repository-responsibilities.md  responsibility-matrix.md  runtime-architecture.md
contracts/: README.md  RM1-contract-package.md
contracts/native/: README.md
contracts/python/: README.md  __init__.py  common_schema.py
contracts/python/consumed/noetica/: provenance_schema.py  verdict_schema.py
contracts/python/consumed/velith/: engineering_result_schema.py
contracts/python/manufacturing/: design_input_schema.py  manufacturability_schema.py  manufacturing_episode_schema.py  manufacturing_request_schema.py  manufacturing_task_schema.py  production_plan_schema.py
contracts/schemas/: README.md  common.schema.json
contracts/schemas/consumed/noetica/: provenance.schema.json  verdict.schema.json  verifier.protocol.md
contracts/schemas/consumed/velith/: engineering_result.schema.json
contracts/schemas/manufacturing/: README.md  design_input.schema.json  manufacturability.schema.json  manufacturing_episode.schema.json  manufacturing_request.schema.json  manufacturing_task.schema.json  production_plan.schema.json
deploy/: README.md
docs/: README.md
docs/adr/: 0001-adopt-repository-architecture.md  0002-architecture-refinement-external-review.md  0003-runtime-implementation-order.md  0004-conform-repository-to-handbook.md  README.md
docs/architecture/: constitution-source-audit.md  repository-architecture.md
docs/design/: README.md
docs/governance/: CAP-0001-adopt-handbook-and-conform-repository.md  constitutional-evolution-report.md
native/: README.md
specs/: README.md
specs/interfaces/: README.md  situation-state.md
specs/milestones/: RM1-plan-verify-log.md
src/mini_prometheus/: __init__.py  _contracts.py  _hashing.py  _provenance.py  _validate.py  _verifier.py
src/mini_prometheus/constraint_network/: __init__.py
src/mini_prometheus/intake/: __init__.py  request_intake.py
src/mini_prometheus/integrations/: __init__.py
src/mini_prometheus/integrations/miniflywire/: __init__.py
src/mini_prometheus/integrations/noetica/: __init__.py
src/mini_prometheus/integrations/velith/: __init__.py  adapter.py
src/mini_prometheus/manufacturing_constraints/: __init__.py  capability_model.py  oracle.py
src/mini_prometheus/manufacturing_planning/: __init__.py  planner.py
src/mini_prometheus/manufacturing_state/: __init__.py
src/mini_prometheus/manufacturing_twin/: __init__.py
src/mini_prometheus/orchestration/: __init__.py  episode_store.py  runner.py
src/mini_prometheus/situation_state/: __init__.py
src/mini_prometheus/world_model/: __init__.py
tests/: README.md  conftest.py  support.py
tests/boundary/: test_boundaries.py
tests/contracts/: README.md
tests/contracts/manufacturing/: test_schema_compliance.py
tests/fixtures/: engineer_request_machined_bracket.json
tests/integration/: README.md  test_plan_verify_log.py
tests/unit/: README.md  test_hashing.py  test_intake.py  test_oracle.py  test_planner.py
tools/: README.md  generate_contracts.py
