[project]
name = "mini-prometheus"
version = "0.1.0"
description = "AI Manufacturing Intelligence — runtime orchestration platform integrating MiniFlyWire, Noetica, and Velith."
requires-python = ">=3.11"

# The three upstreams are constitutionally frozen and consumed as PINNED versioned
# package dependencies. Pin to exact frozen releases — never floating ranges.
# Uncomment and pin exact versions as each frozen release is published.
dependencies = [
    # "miniflywire==<frozen-version>",
    # "noetica==<frozen-version>",
    # "velith==<frozen-version>",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "import-linter",   # enforces contracts-only cross-boundary dependency direction
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mini_prometheus"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests", "tools"]

# Dependency direction is one-way: implementations -> contracts.
# Never contracts -> implementations; never src <-> src across packages except via contracts.
# Concrete import-linter contracts are added alongside the first implementation.
[tool.importlinter]
root_packages = ["mini_prometheus"]
